--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.6.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
   }
 }
