--- a/backend-full-adv/.env.sample
+++ b/backend-full-adv/.env.sample
@@ -1,2 +1,9 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://amisha9565:password-here@cluster0.4gbve.mongodb.net
+
+# CORS_ORIGIN=* will allow for all
+CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=0TUCKcyqgZAaM0ogRHVIg9GG_Gzh9zMocy03UtNdDNtoJ0X0-5n3DmVkx08MCFRSLD9cV1kBflwK7fdO
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=Refreshtoken
+REFRESH_TOKEN_EXPIRY=10d
