--- a/backend-full-adv/package.json
+++ b/backend-full-adv/package.json
@@ -15,6 +15,7 @@
   "author": "Amisha Pandey",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
